# AC215_finwhiz

./: .gitignore  README.md  ReadMe.md  \  \.pub  docker-compose.yml  requirements.txt  test.txt  test_prompt.py
data/tmp/about-form-1099-misc-miscellaneous-information-internal-revenue-service/unknown/: about-form-1099-misc-miscellaneous-information-internal-revenue-service.ndjson
data/tmp/about-form-w-4-employee-s-withholding-certificate-internal-revenue-service/unknown/: about-form-w-4-employee-s-withholding-certificate-internal-revenue-service.ndjson
data/tmp/about-publication-505-tax-withholding-and-estimated-tax-internal-revenue-service/unknown/: about-publication-505-tax-withholding-and-estimated-tax-internal-revenue-service.ndjson
data/tmp/amount-of-roth-ira-contributions-that-you-can-make-for-2024-internal-revenue-service/2024/: amount-of-roth-ira-contributions-that-you-can-make-for-2024-internal-revenue-service.ndjson
data/tmp/general-instructions-for-forms-w-2-and-w-3-2025-internal-revenue-service/2025/: general-instructions-for-forms-w-2-and-w-3-2025-internal-revenue-service.ndjson
finra_rag/: .env.example  Makefile  todo.txt
finra_rag/data/: ReadMe.md
finra_rag/src/export/: build_json1.py  to_gcs.py
ingest/irs/: normalize.py  parse_pdf.py
ml_pipeline/: Dockerfile  embedding.py
src/embedder/: embedding.py  pyproject.toml
src/llm/: Dockerfile  language.py  llm_api.py  pyproject.toml
src/ml_pipeline/: Dockerfile  embedding.py  language.py  pyproject.toml  view_bucket_contents.py
src/query_client/: interactive_query.py
src/retriever/: Dockerfile  pyproject.toml  retriever.py  retriever_module.py  sync_chroma.py  test_retriever.py
src/synthetic_data/: Dockerfile  README.md  pyproject.toml
src/synthetic_data/w2/assets/: copy_b_field_map.yaml
src/synthetic_data/w2/synthetic_w2/: __main__.py  cli.py  generator.py
src/synthetic_data/w2/tests/: test_placeholder.py
src/webscraping/: Dockerfile
src/webscraping/ingest/consumer_finance/: normalize_cf.py  (+1 more)
synthetic_data/w2/: Dockerfile  README.md
webscraping/: Dockerfile  pyproject.toml
webscraping/config/: gcs.json
webscraping/ingest/finra/: requirements.txt
webscraping/ingest/fred/: .gitignore  Makefile  ReadMe.Md  requirements.txt
webscraping/ingest/fred/config/: series.yml
webscraping/ingest/fred/src/export/: to_gcs.py
webscraping/ingest/fred/src/fred/: fetch_data.py  transform.py
webscraping/ingest/investorgov/: .gitignore  Makefile  README.md  parse_html.py  requirements.txt
webscraping/ingest/investorgov/config/: investor_allowlist.yml  investor_routing.yml
webscraping/ingest/investorgov/src/crawl/: run_crawl.py
(+6 files in other folders)
