[project]
name = "app"
version = "0.1.0"
description = "This is the container for the webscraping portion of the project"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12",
    "pymupdf>=1.24",
    "requests>=2.31",
    "google-cloud-storage>=2.14",
    "pyyaml>=6.0",
    "pandas>=2.3.3",
]
