[project]
name = "app"
version = "0.1.0"
description = "This is the container for the machine learning pipeline portion of the project"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "langchain-google-vertexai>=2.1.2",
    "pydantic>=2.12.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "uvicorn>=0.37.0",
]
