[project]
name = "synthetic-w2"
version = "0.1.0"
description = "Containerized synthetic W-2 generator for FinWhiz"
requires-python = ">=3.12"
dependencies = [
    "faker>=30.6.0",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "pypdf>=5.1.0",
    "pydantic>=2.9.2",
    "pyyaml>=6.0.2",
    "typer>=0.12.5",
]
